# Smart_security

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
PCB/: ProPrj_Smart_security_2024-12-20.epro
PCB/Smart_security/Board1/: PCB1.pcbdoc
PCB/Smart_security/Board1/Schematic1/: 1_P1.schdoc
main/: Beep.cpp  Beep.h  CMakeLists.txt  DHT11.cpp  DHT11.h  JSON.cpp  JSON.h  MQ_2.cpp  MQ_2.h  M_FileLog.h  Screen.cpp  Screen.h  System.cpp  System.h  ble.cpp  ble.h  font.h  hal_idf.c  hal_idf.h  hal_idf_bletooth.h  hal_idf_bluetooth.c  main.cpp  oled.c  oled.h  oledfont.h  pins.h  timer.cpp  timer.h  user_queue.c  user_queue.h
